compiler/test/snapshot/infer-expr/error-when-reassign-to-wrong-type.exp
Error when reassign to wrong type.

SOURCE:
{
  let x = 1;
  x = "foo"
}

OUTPUT:
Type mismatch
Expected:
    Int
Got:
    String

3|    x = "foo"
      ^^^^^^^^^